06/global.css
body {
  background-color: #323232;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #FFFFFF;
}

h1 {
  background-color: #7F3A7D;
  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
  color: #FFFFFF;
  text-align: center;
  font-weight: bold;
  font-size: 30px;
  padding: 20px;
  border-bottom: 1px solid #CC6CC3;
}

h2 {
  text-align: center;
  font-size: 20px;
  padding-top: 20px;  
}

#intro {
  font-size: 16px;
  padding: 8px 20px 20px 20px;
  border-left: 1px solid red;
  border-bottom: 1px solid #FFFFFF;
  margin: 0;
}

h3 {
  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
  color: #FFFFFF;
  font-weight: bold;
  font-size: 22px;
  text-transform: uppercase;
  text-decoration: underline;
  padding: 20px;
}

p {
  font-size: 14px;
  margin-left: 20px; 
}

a {
  background-color: #000000;
  color: #FFFFFF;
  font-size: 16px;
  text-transform: uppercase;
  padding: 3px;
}

